recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:5: error: reassignment to val
    l = l.head::butLast(l.tail)
      ^